--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -222,14 +222,14 @@
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "viewIdentity.addAuthorizedSigner": "Add authorized signer",
-  "viewIdentity.editAuthorizedSigners": "Edit authorized signers",
-  "viewIdentity.titleForCompanyIdentity": "Company information",
-  "viewIdentity.titleForPersonalIdentity": "Personal identity"
   "pay.title": "Payment instructions",
   "payment.info.address": "Address to pay",
   "payment.info.from": "Payment from",
   "payment.info.link": "Link to pay",
+  "viewIdentity.addAuthorizedSigner": "Add authorized signer",
+  "viewIdentity.editAuthorizedSigners": "Edit authorized signers",
+  "viewIdentity.titleForCompanyIdentity": "Company information",
+  "viewIdentity.titleForPersonalIdentity": "Personal identity",
   "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
   "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
