fix identity switch (#240)
* chore: fix dependency

* chore: switch identity changes

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -205,6 +205,10 @@
   "endorsements.title": "Endorsements ({count})",
   "identity.companyIdentities.title": "Company identities",
   "identity.createNewCompanyIdentity": "Create new company",
+  "identity.logout": "Remove identity from device",
+  "identity.personalIdentity.title": "Personal identity",
+  "identity.title": "Switch identity",
+  "identity.view": "View",
   "identity.logout": "Log out account",
   "identity.title": "Identity",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
