Create company identity (#195)
* chore: setup new identity flow

* chore: refactor bills overview page

* chore: integrate more endpoints

* chore: fix issues

* fix: loading status

* chore: fix type issues

* chore: fix type issues

* chore: fix type issues

* chore: create category selection component

* chore: refactor bill issuer flow

* chore: refactor authorized signer flow

* chore: cleanup files

* chore: create company creation initial files

* chore: create preview information screen

* chore: change form structure

* wip

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -36,6 +36,8 @@
   "Contingent": "Contingent",
   "Continue": "Continue",
   "Country of birth": "Country of birth",
+  "Country of registration": "Country of registration",
+  "Create company": "Create company",
   "Create new contact": "Create new contact",
   "Create new identity": "Create new identity",
   "Dates": "Dates",
@@ -68,6 +70,7 @@
   "Legal company name": "Legal company name",
   "Legal full name": "Legal full name",
   "Locale": "Locale",
+  "Make it easier to create bills with colleagues from your company": "Make it easier to create bills with colleagues from your company",
   "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
@@ -99,9 +102,12 @@
   "Postal address": "Postal address",
   "Preview": "Preview",
   "Preview bill": "Preview bill",
+  "Preview company": "Preview company",
   "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
+  "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
+  "Registration date": "Registration date",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
   "Required information": "Required information",
@@ -133,6 +139,7 @@
   "Unlock with PIN": "Unlock with PIN",
   "Unlock with PIN code": "Unlock with PIN code",
   "Upload document": "Upload document",
+  "Upload proof of registration": "Upload proof of registration",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
   "You can always re-add a contact later": "You can always re-add a contact later",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
