--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -106,7 +106,6 @@
   "Preview identity": "Preview identity",
   "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
-  "Reduces the risk of default and the loss in case of default.": "Reduces the risk of default and the loss in case of default.",
   "Registration date": "Registration date",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
@@ -188,6 +187,7 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "contacts.create": "New contact",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
@@ -216,8 +216,6 @@
   "identity.personalIdentity.title": "Personal identity",
   "identity.title": "Switch identity",
   "identity.view": "View",
-  "identity.logout": "Log out account",
-  "identity.title": "Identity",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
@@ -237,10 +235,6 @@
   "payment.info.address": "Address to pay",
   "payment.info.from": "Payment from",
   "payment.info.link": "Link to pay",
-  "viewIdentity.addAuthorizedSigner": "Add authorized signer",
-  "viewIdentity.editAuthorizedSigners": "Edit authorized signers",
-  "viewIdentity.titleForCompanyIdentity": "Company information",
-  "viewIdentity.titleForPersonalIdentity": "Personal identity",
   "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
   "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
