chore: create mint settings page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -242,15 +242,32 @@
   "settings.languagePreference": "Language",
   "settings.languagePreference.title": "Language preference",
   "settings.legal": "Legal",
+  "settings.menu.about": "About",
+  "settings.menu.decimals": "Decimals",
+  "settings.menu.mints": "Mints",
+  "settings.menu.notifications": "Notifications",
+  "settings.menu.security": "Security",
   "settings.menu.title": "General",
+  "settings.mint.balance.markUp": "Mark up",
+  "settings.mint.balance.mintLine": "Mint line",
+  "settings.mint.property.billCover": "Bill cover",
+  "settings.mint.property.bitcoinCover": "Bitcoin cover",
+  "settings.mint.property.guaranteeLevel": "Guarantee level",
+  "settings.mint.property.online": "Online",
+  "settings.mint.status": "Status",
+  "settings.mints.balance": "Balance",
+  "settings.notifications.app": "App notifications",
+  "settings.notifications.app.description": "Receive notifications when your app is open",
   "settings.notifications.description": "In app notifications will always be on",
-  "settings.notifications.desktop": "Desktop notifications",
-  "settings.notifications.desktop.description": "Receive push notifications on your device",
-  "settings.notifications.email": "Email notifications",
-  "settings.notifications.email.description": "Receive notifications via email",
   "settings.notifications.title": "Notifications",
+  "settings.reset.cancel": "Cancel",
+  "settings.reset.deleteSeed": "Delete seed",
+  "settings.reset.preview.subtitle": "This will remove your data from this device.",
+  "settings.reset.preview.title": "Are you sure?",
   "settings.security.changePin": "Change PIN",
   "settings.security.changePinDescription": "4 digits",
+  "settings.security.loginWithPin": "Login with PIN code",
+  "settings.security.loginWithPin.description": "Use your PIN code to unlock the app",
   "settings.security.recoveryPhrase": "Recovery phrase",
   "settings.security.recoveryPhraseDescription": "12 words",
   "settings.security.resetApp": "Reset app",
