chore: update contact view flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -42,7 +42,6 @@
   "Create new identity": "Create new identity",
   "Dates": "Dates",
   "Days": "Days",
-  "Delete contact": "Delete",
   "Discount": "Discount",
   "Discount rate": "Discount rate",
   "Draw bill": "Draw bill",
@@ -77,7 +76,6 @@
   "Mint a bill": "Mint a bill",
   "Name, address, email": "Name, address, email...",
   "Net amount": "Net amount",
-  "New Contact": "New contact",
   "New bill": "New bill",
   "New identity": "New identity",
   "No bills issued yet": "No bills issued yet",
@@ -187,9 +185,27 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "contact.action.delete.cancel": "Cancel",
+  "contact.action.delete.confirm": "Delete",
+  "contact.company.cityOfRegistration": "City of registration",
+  "contact.company.countryOfRegistration": "Country of registration",
+  "contact.company.email": "Email",
+  "contact.company.name": "Company name",
+  "contact.company.registrationDate": "Registration date",
+  "contact.company.registrationNumber": "Registration number",
+  "contact.delete": "Delete contact",
+  "contact.personal.address": "Postal address",
+  "contact.personal.birthDate": "Birth date",
+  "contact.personal.cityOfBirth": "City of birth",
+  "contact.personal.countryOfBirth": "Country of birth",
+  "contact.personal.email": "Email address",
+  "contact.personal.name": "Full name",
+  "contact.personal.socialSecurityNumber": "Social security number",
   "contacts.create": "New contact",
-  "contacts.empty.description": "Create your first contact to start a relation",
+  "contacts.empty.create": "New contact",
+  "contacts.empty.description": "Create your first contact to start issuing bills",
   "contacts.empty.title": "No contacts yet",
+  "contacts.view.title": "View contact",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
