chore: update contact creation flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -202,6 +202,29 @@
   "contact.personal.name": "Full name",
   "contact.personal.socialSecurityNumber": "Social security number",
   "contacts.create": "New contact",
+  "contacts.create.optionalInformation.cityOfBirth": "City of birth",
+  "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
+  "contacts.create.optionalInformation.continue": "Continue",
+  "contacts.create.optionalInformation.description": "This information is optional, just for your own records",
+  "contacts.create.optionalInformation.registrationNumber": "Registration number",
+  "contacts.create.optionalInformation.skip": "Skip",
+  "contacts.create.optionalInformation.socialSecurityNumber": "Social security number",
+  "contacts.create.optionalInformation.title": "Optional",
+  "contacts.create.postalAddress.city": "City",
+  "contacts.create.postalAddress.description": "Postal address of the bill counterparty",
+  "contacts.create.postalAddress.next": "Continue",
+  "contacts.create.postalAddress.streetAddress": "Street address",
+  "contacts.create.postalAddress.title": "Required",
+  "contacts.create.postalAddress.zipCode": "Zip code",
+  "contacts.create.requiredInformation.companyName": "Legal company name",
+  "contacts.create.requiredInformation.continue": "Continue",
+  "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
+  "contacts.create.requiredInformation.nodeId": "Node ID",
+  "contacts.create.requiredInformation.personalName": "Legal full name",
+  "contacts.create.requiredInformation.title": "Required",
+  "contacts.create.switchToCompany": "Company",
+  "contacts.create.switchToMint": "Mint",
+  "contacts.create.switchToPerson": "Person",
   "contacts.empty.create": "New contact",
   "contacts.empty.description": "Create your first contact to start issuing bills",
   "contacts.empty.title": "No contacts yet",
