chore: create recourse after non acceptance page

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -187,6 +187,16 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
+  "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
+  "bill.recourse.nonAcceptance.select": "Select",
+  "bill.recourse.nonAcceptance.sum": "Request the sum of",
+  "bill.recourse.nonAcceptance.title": "Request recourse",
+  "bill.recourse.sign": "Sign",
+  "bill.recourse.sign.cancel": "Cancel",
+  "bill.recourse.sign.confirm": "Confirm",
+  "bill.recourse.sign.subtitle": "This recourse request is legally binding",
+  "bill.recourse.sign.title": "Are you sure?",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
   "displayRange.days": "{value} Days",
