chore: fix country selector rendering; place all registration steps into the same file

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -205,17 +205,31 @@
   "contacts.create.optionalInformation.cityOfBirth": "City of birth",
   "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
   "contacts.create.optionalInformation.continue": "Continue",
+  "contacts.create.optionalInformation.countryOfBirth": "Country of birth",
+  "contacts.create.optionalInformation.countryOfRegistration": "Country of registration",
+  "contacts.create.optionalInformation.dateOfBirth": "Date of birth",
+  "contacts.create.optionalInformation.dateOfRegistration": "Date of registration",
   "contacts.create.optionalInformation.description": "This information is optional, just for your own records",
   "contacts.create.optionalInformation.registrationNumber": "Registration number",
   "contacts.create.optionalInformation.skip": "Skip",
   "contacts.create.optionalInformation.socialSecurityNumber": "Social security number",
   "contacts.create.optionalInformation.title": "Optional",
   "contacts.create.postalAddress.city": "City",
+  "contacts.create.postalAddress.country": "Country",
   "contacts.create.postalAddress.description": "Postal address of the bill counterparty",
   "contacts.create.postalAddress.next": "Continue",
   "contacts.create.postalAddress.streetAddress": "Street address",
   "contacts.create.postalAddress.title": "Required",
   "contacts.create.postalAddress.zipCode": "Zip code",
+  "contacts.create.preview.cityOfBirth": "City of birth",
+  "contacts.create.preview.cityOfRegistration": "City of registration",
+  "contacts.create.preview.countryOfBirth": "Country of birth",
+  "contacts.create.preview.countryOfRegistration": "Country of registration",
+  "contacts.create.preview.dateOfBirth": "Date of birth",
+  "contacts.create.preview.dateOfRegistration": "Date of registration",
+  "contacts.create.preview.postalAddress": "Postal address",
+  "contacts.create.preview.registrationNumber": "Registration number",
+  "contacts.create.preview.socialSecurityNumber": "Social security number",
   "contacts.create.requiredInformation.companyName": "Legal company name",
   "contacts.create.requiredInformation.continue": "Continue",
   "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
