chore: move entire contact view into single file

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -187,20 +187,7 @@
   "bill.mint.title": "Mint quotes",
   "contact.action.delete.cancel": "Cancel",
   "contact.action.delete.confirm": "Delete",
-  "contact.company.cityOfRegistration": "City of registration",
-  "contact.company.countryOfRegistration": "Country of registration",
-  "contact.company.email": "Email",
-  "contact.company.name": "Company name",
-  "contact.company.registrationDate": "Registration date",
-  "contact.company.registrationNumber": "Registration number",
   "contact.delete": "Delete contact",
-  "contact.personal.address": "Postal address",
-  "contact.personal.birthDate": "Birth date",
-  "contact.personal.cityOfBirth": "City of birth",
-  "contact.personal.countryOfBirth": "Country of birth",
-  "contact.personal.email": "Email address",
-  "contact.personal.name": "Full name",
-  "contact.personal.socialSecurityNumber": "Social security number",
   "contacts.create": "New contact",
   "contacts.create.optionalInformation.cityOfBirth": "City of birth",
   "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
@@ -242,6 +229,22 @@
   "contacts.empty.create": "New contact",
   "contacts.empty.description": "Create your first contact to start issuing bills",
   "contacts.empty.title": "No contacts yet",
+  "contacts.view.company.address": "Company address",
+  "contacts.view.company.cityOfRegistration": "City of registration",
+  "contacts.view.company.countryOfRegistration": "Country of registration",
+  "contacts.view.company.email": "Company email",
+  "contacts.view.company.name": "Company name",
+  "contacts.view.company.registrationDate": "Registration date",
+  "contacts.view.company.registrationDocument": "Registration document",
+  "contacts.view.company.registrationNumber": "Registration number",
+  "contacts.view.person.address": "Postal address",
+  "contacts.view.person.cityOfBirth": "City of birth",
+  "contacts.view.person.countryOfBirth": "Country of birth",
+  "contacts.view.person.dateOfBirth": "Date of birth",
+  "contacts.view.person.email": "Email address",
+  "contacts.view.person.name": "Legal full name",
+  "contacts.view.person.registrationDocument": "Registration document",
+  "contacts.view.person.socialSecurityNumber": "Social security number",
   "contacts.view.title": "View contact",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
