--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -210,17 +210,23 @@
   "contacts.create.postalAddress.zipCode": "Zip code",
   "contacts.create.preview.cityOfBirth": "City of birth",
   "contacts.create.preview.cityOfRegistration": "City of registration",
+  "contacts.create.preview.companyAddress": "Postal address",
+  "contacts.create.preview.companyEmail": "Company email",
   "contacts.create.preview.countryOfBirth": "Country of birth",
   "contacts.create.preview.countryOfRegistration": "Country of registration",
   "contacts.create.preview.dateOfBirth": "Date of birth",
   "contacts.create.preview.dateOfRegistration": "Date of registration",
+  "contacts.create.preview.email": "Email address",
   "contacts.create.preview.postalAddress": "Postal address",
   "contacts.create.preview.registrationNumber": "Registration number",
   "contacts.create.preview.socialSecurityNumber": "Social security number",
+  "contacts.create.preview.title": "Preview",
+  "contacts.create.requiredInformation.companyEmail": "Company email",
   "contacts.create.requiredInformation.companyName": "Legal company name",
   "contacts.create.requiredInformation.continue": "Continue",
   "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
   "contacts.create.requiredInformation.nodeId": "Node ID",
+  "contacts.create.requiredInformation.personalEmail": "Email address",
   "contacts.create.requiredInformation.personalName": "Legal full name",
   "contacts.create.requiredInformation.title": "Required",
   "contacts.create.switchToCompany": "Company",
