--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -197,6 +197,7 @@
   "contacts.create.optionalInformation.dateOfBirth": "Date of birth",
   "contacts.create.optionalInformation.dateOfRegistration": "Date of registration",
   "contacts.create.optionalInformation.description": "This information is optional, just for your own records",
+  "contacts.create.optionalInformation.registrationDocument": "Identity document",
   "contacts.create.optionalInformation.registrationNumber": "Registration number",
   "contacts.create.optionalInformation.skip": "Skip",
   "contacts.create.optionalInformation.socialSecurityNumber": "Social security number",
@@ -208,6 +209,7 @@
   "contacts.create.postalAddress.streetAddress": "Street address",
   "contacts.create.postalAddress.title": "Required",
   "contacts.create.postalAddress.zipCode": "Zip code",
+  "contacts.create.preview.cancel": "Cancel",
   "contacts.create.preview.cityOfBirth": "City of birth",
   "contacts.create.preview.cityOfRegistration": "City of registration",
   "contacts.create.preview.companyAddress": "Postal address",
@@ -218,7 +220,9 @@
   "contacts.create.preview.dateOfRegistration": "Date of registration",
   "contacts.create.preview.email": "Email address",
   "contacts.create.preview.postalAddress": "Postal address",
+  "contacts.create.preview.registrationDocument": "Registration document",
   "contacts.create.preview.registrationNumber": "Registration number",
+  "contacts.create.preview.save": "Save",
   "contacts.create.preview.socialSecurityNumber": "Social security number",
   "contacts.create.preview.title": "Preview",
   "contacts.create.requiredInformation.companyEmail": "Company email",
