chore: updates to edit flow

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -188,22 +188,26 @@
   "contact.action.delete.cancel": "Cancel",
   "contact.action.delete.confirm": "Delete",
   "contact.delete": "Delete contact",
+  "contacts.address": "Street address",
+  "contacts.city": "City",
+  "contacts.company.cityOfRegistration": "City of registration",
+  "contacts.company.countryOfRegistration": "Country of registration",
+  "contacts.company.dateOfRegistration": "Date of registration",
+  "contacts.company.email": "Company email",
+  "contacts.company.name": "Legal company name",
+  "contacts.company.registrationDocument": "Registration document",
+  "contacts.company.registrationNumber": "Registration number",
+  "contacts.country": "Country",
   "contacts.create": "New contact",
   "contacts.create.optionalInformation.cityOfBirth": "City of birth",
   "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
   "contacts.create.optionalInformation.continue": "Continue",
-  "contacts.create.optionalInformation.countryOfBirth": "Country of birth",
-  "contacts.create.optionalInformation.countryOfRegistration": "Country of registration",
-  "contacts.create.optionalInformation.dateOfBirth": "Date of birth",
-  "contacts.create.optionalInformation.dateOfRegistration": "Date of registration",
   "contacts.create.optionalInformation.description": "This information is optional, just for your own records",
-  "contacts.create.optionalInformation.registrationDocument": "Identity document",
   "contacts.create.optionalInformation.registrationNumber": "Registration number",
   "contacts.create.optionalInformation.skip": "Skip",
   "contacts.create.optionalInformation.socialSecurityNumber": "Social security number",
   "contacts.create.optionalInformation.title": "Optional",
   "contacts.create.postalAddress.city": "City",
-  "contacts.create.postalAddress.country": "Country",
   "contacts.create.postalAddress.description": "Postal address of the bill counterparty",
   "contacts.create.postalAddress.next": "Continue",
   "contacts.create.postalAddress.streetAddress": "Street address",
@@ -225,20 +229,29 @@
   "contacts.create.preview.save": "Save",
   "contacts.create.preview.socialSecurityNumber": "Social security number",
   "contacts.create.preview.title": "Preview",
-  "contacts.create.requiredInformation.companyEmail": "Company email",
   "contacts.create.requiredInformation.companyName": "Legal company name",
   "contacts.create.requiredInformation.continue": "Continue",
   "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
   "contacts.create.requiredInformation.nodeId": "Node ID",
-  "contacts.create.requiredInformation.personalEmail": "Email address",
   "contacts.create.requiredInformation.personalName": "Legal full name",
   "contacts.create.requiredInformation.title": "Required",
   "contacts.create.switchToCompany": "Company",
   "contacts.create.switchToMint": "Mint",
   "contacts.create.switchToPerson": "Person",
+  "contacts.edit": "Edit contact",
+  "contacts.edit.cancel": "Cancel",
+  "contacts.edit.save": "Save",
   "contacts.empty.create": "New contact",
   "contacts.empty.description": "Create your first contact to start issuing bills",
   "contacts.empty.title": "No contacts yet",
+  "contacts.nodeId": "Node ID",
+  "contacts.person.cityOfBirth": "City of birth",
+  "contacts.person.countryOfBirth": "Country of birth",
+  "contacts.person.dateOfBirth": "Date of birth",
+  "contacts.person.email": "Email address",
+  "contacts.person.identityDocument": "Identity document",
+  "contacts.person.identityNumber": "Social security number",
+  "contacts.person.name": "Legal full name",
   "contacts.view.company.address": "Company address",
   "contacts.view.company.cityOfRegistration": "City of registration",
   "contacts.view.company.countryOfRegistration": "Country of registration",
@@ -256,6 +269,7 @@
   "contacts.view.person.registrationDocument": "Registration document",
   "contacts.view.person.socialSecurityNumber": "Social security number",
   "contacts.view.title": "View contact",
+  "contacts.zipCode": "Zip code",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
