contacts flow fixes (#242)
* wip

* chore: update contact view flow

* chore: update contact creation flow

* wip

* chore: fix country selector rendering; place all registration steps into the same file

* chore: move entire contact view into single file

* wip

* wip

* wip

* chore: updates to edit flow

* chore: integrate contact view endpoint

* chore: fix routes

* chore: type corrections and more mocks

* chore: more typedefs

* wip

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,12 +1,10 @@
 {
   "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
   "Accept": "Accept",
-  "Add logo": "Add logo",
   "Add photo": "Add photo",
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
-  "Are you sure": "Are you sure?",
   "Authorised signer": "Authorised signer",
   "Balances": "Balances",
   "Bill issuer": "Bill issuer",
@@ -38,17 +36,14 @@
   "Country of birth": "Country of birth",
   "Country of registration": "Country of registration",
   "Create company": "Create company",
-  "Create new contact": "Create new contact",
   "Create new identity": "Create new identity",
   "Dates": "Dates",
   "Days": "Days",
-  "Delete contact": "Delete",
   "Discount": "Discount",
   "Discount rate": "Discount rate",
   "Draw bill": "Draw bill",
   "E-bills": "E-bills",
   "Edit": "Edit",
-  "Edit contact": "Edit contact",
   "Edit issue": "Edit issue",
   "Email address": "Email address",
   "Endorse to the order of": "Endorse to the order of",
@@ -77,7 +72,6 @@
   "Mint a bill": "Mint a bill",
   "Name, address, email": "Name, address, email...",
   "Net amount": "Net amount",
-  "New Contact": "New contact",
   "New bill": "New bill",
   "New identity": "New identity",
   "No bills issued yet": "No bills issued yet",
@@ -112,7 +106,6 @@
   "Required information": "Required information",
   "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
-  "Save": "Save",
   "Search": "Search",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
@@ -140,7 +133,6 @@
   "Upload document": "Upload document",
   "Upload proof of registration": "Upload proof of registration",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
-  "You can always re-add a contact later": "You can always re-add a contact later",
   "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
   "authorizedSigners.title": "Authorized Signers",
   "bill.actions.actionsList": "Endorse",
@@ -187,6 +179,66 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "contact.view.delete": "Delete contact",
+  "contact.view.delete.cancel": "Cancel",
+  "contact.view.delete.confirm": "Delete",
+  "contact.view.delete.description": "You can always re-add a contact later",
+  "contact.view.delete.title": "Are you sure?",
+  "contacts.address": "Street address",
+  "contacts.city": "City",
+  "contacts.company.cityOfRegistration": "City of registration",
+  "contacts.company.countryOfRegistration": "Country of registration",
+  "contacts.company.dateOfRegistration": "Date of registration",
+  "contacts.company.email": "Company email",
+  "contacts.company.name": "Legal company name",
+  "contacts.company.registrationDocument": "Registration document",
+  "contacts.company.registrationNumber": "Registration number",
+  "contacts.country": "Country",
+  "contacts.create": "New contact",
+  "contacts.create.optionalInformation.cityOfBirth": "City of birth",
+  "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
+  "contacts.create.optionalInformation.continue": "Continue",
+  "contacts.create.optionalInformation.description": "This information is optional, just for your own records",
+  "contacts.create.optionalInformation.registrationNumber": "Registration number",
+  "contacts.create.optionalInformation.skip": "Skip",
+  "contacts.create.optionalInformation.socialSecurityNumber": "Social security number",
+  "contacts.create.optionalInformation.title": "Optional",
+  "contacts.create.postalAddress.city": "City",
+  "contacts.create.postalAddress.description": "Postal address of the bill counterparty",
+  "contacts.create.postalAddress.next": "Continue",
+  "contacts.create.postalAddress.streetAddress": "Street address",
+  "contacts.create.postalAddress.title": "Required",
+  "contacts.create.postalAddress.zipCode": "Zip code",
+  "contacts.create.preview.cancel": "Cancel",
+  "contacts.create.preview.cityOfBirth": "City of birth",
+  "contacts.create.preview.cityOfRegistration": "City of registration",
+  "contacts.create.preview.companyAddress": "Postal address",
+  "contacts.create.preview.companyEmail": "Company email",
+  "contacts.create.preview.countryOfBirth": "Country of birth",
+  "contacts.create.preview.countryOfRegistration": "Country of registration",
+  "contacts.create.preview.dateOfBirth": "Date of birth",
+  "contacts.create.preview.dateOfRegistration": "Date of registration",
+  "contacts.create.preview.email": "Email address",
+  "contacts.create.preview.postalAddress": "Postal address",
+  "contacts.create.preview.registrationDocument": "Registration document",
+  "contacts.create.preview.registrationNumber": "Registration number",
+  "contacts.create.preview.save": "Save",
+  "contacts.create.preview.socialSecurityNumber": "Social security number",
+  "contacts.create.preview.title": "Preview",
+  "contacts.create.requiredInformation.companyName": "Legal company name",
+  "contacts.create.requiredInformation.continue": "Continue",
+  "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
+  "contacts.create.requiredInformation.nodeId": "Node ID",
+  "contacts.create.requiredInformation.personalName": "Legal full name",
+  "contacts.create.requiredInformation.title": "Required",
+  "contacts.create.switchToCompany": "Company",
+  "contacts.create.switchToMint": "Mint",
+  "contacts.create.switchToPerson": "Person",
+  "contacts.edit": "Edit contact",
+  "contacts.edit.cancel": "Cancel",
+  "contacts.edit.save": "Save",
+  "contacts.empty.create": "New contact",
+  "contacts.empty.description": "Create your first contact to start issuing bills",
   "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
   "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
   "bill.recourse.nonAcceptance.select": "Select",
@@ -199,6 +251,16 @@
   "bill.recourse.sign.title": "Are you sure?",
   "contacts.empty.description": "Create your first contact to start a relation",
   "contacts.empty.title": "No contacts yet",
+  "contacts.nodeId": "Node ID",
+  "contacts.person.cityOfBirth": "City of birth",
+  "contacts.person.countryOfBirth": "Country of birth",
+  "contacts.person.dateOfBirth": "Date of birth",
+  "contacts.person.email": "Email address",
+  "contacts.person.identityDocument": "Identity document",
+  "contacts.person.identityNumber": "Social security number",
+  "contacts.person.name": "Legal full name",
+  "contacts.view.title": "View contact",
+  "contacts.zipCode": "Zip code",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
